# shikibaio

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
shikibaio/: __init__.py  _dispatcher.py  handler.py  handlers.py  utils.py
shikibaio/adapt_clients/: __init__.py  base.py  shiki4py.py  shikithon.py
shikibaio/enums/: __init__.py  data_type.py  event_type.py
shikibaio/filters/: __init__.py  builtin.py  filters.py
shikibaio/storages/: __init__.py  memory.py
shikibaio/testing/: __init__.py  topic.py
shikibaio/types/: __init__.py  event.py
