[tool.poetry]
name = "shikibaio"
version = "0.1.0a0"
description = "Asynchronous bot development framework for shikimori."
authors = ["ren3104 <2ren3104@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/ren3104/shikibaio"
repository = "https://github.com/ren3104/shikibaio"
keywords = [
    "shikimori",
    "shikibaio",
    "bot",
    "bot-framework",
    "asyncio"
]
classifiers = ["Typing :: Typed"]
packages = [
    { include = "shikibaio", from = "." }
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/ren3104/shikibaio/issues"

[tool.poetry.dependencies]
python = "^3.7, <3.10"
aiocometd = "^0.4.5"

[tool.poetry.dev-dependencies]
pre-commit = "^2.20.0"
black = "^22.8.0"
isort = "^5.10.1"
mypy = "^0.971"

[tool.isort]
profile = "black"

[tool.mypy]
python_version = 3.7
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"